Since 1.6.2:
  - New: Method `get_surface_state` of the `Somoclu` object in Python calculates the activation map for all data instances.
  - New: Method `view_activation_map` of the `Somoclu` object in Python allows plotting the activation map for the training data instances or for a new data instance.

Version 1.6.2: 2016-08-09
  - Changed: In-place codebook updates when compiled without MPI. This improves update speed and substantially cuts memory use.
  - Changed: Compatible with Visual Studio 15.
  - Fixed: The BMUs returned after training were from before the last epoch. Now another round of BMU search is done.
  - Fixed: Training can continue on the same data in the Python wrapper.
  - Fixed: GPU memory allocation problem on Windows.

Version 1.6.1: 2016-02-22
  - New: Option for PCA initialization is added to the Python interface.
  - New: Clustering of the codebook with arbitrary clustering algorithm in scikit-learn is now possible in the Python interface.

Version 1.6: 2016-01-10
  - New: R wrapper integrates with kohonen package.
  - New: MATLAB wrapper integrates with soomtoolbox.
  - New: Better handling of CUDA compilation in the Python interface.
  - Changed: Throws an exception if GPU kernel is requested, but it was compiled without it. The earlier behaviour quietly defaulted to the CPU kernel.

Version 1.5.1: 2015-12-02
  - New: Neighborhood function can be chosen between Gaussian and bubble.
  - Fixed: R wrapper passes arrays with correct orientation.
  - Fixed: `io.cpp` is no longer required in the wrappers. An exception is thrown when needed.

Version 1.5: 2015-09-30
  - New: Python interface has visual capabilities.
  - New: Option for hexagonal grid.
  - New: Option for requesting compact support in updating the map.
  - New: Python, R, and MATLAB interfaces now allow passing an initial codebook.
  - Changed: Reduced memory use in calculating U-matrices.
  - Changed: Build system rebuilt and simplified.

Version 1.4.1: 2015-01-28