@@ -5,4 +5,4 @@ Function Reference
 Somoclu Class
 =============
 .. autoclass:: somoclu.Somoclu
-   :members: get_surface_state, load_bmus, load_umatrix, load_codebook, train, update_data, view_activation_map, view_component_planes, view_umatrix, cluster
+   :members: get_surface_state, load_bmus, load_umatrix, load_codebook, train, update_data, view_activation_map, view_component_planes, view_similarity_matrix, view_umatrix, cluster
